sample/error/e02809.asn
E02809 DEFINITIONS ::=
BEGIN
    Cho ::= CHOICE {        -- E02809
        item    INTEGER,
        item    REAL,
        item    BIT STRING
    }
END
